--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 /tmp
 /out-tsc
 /bazel-out
+.firebase/
+.angular/
+.firebaserc
+firebase.json
+.vscode/
+
 
 # Node
 /node_modules
@@ -21,12 +27,7 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+
 
 # Miscellaneous
 /.angular/cache
